--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc src/server.ts",
+    "dev": "nodemon src/server.ts",
+    "start": "node dist/server.js",
+    "test": "jest -i --coverage",
+    "dev:test": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test nodemon src/server.ts",
+    "test:integration": "dotenv -e .env.test jest -- -i ./tests/integration",
+    "test:unit": "dotenv -e .env.test jest -- -i ./tests/unit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^4.4.0",
+    "@prisma/client": "^4.3.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.1",
     "node": "^16.15.1",
-    "prisma": "^4.4.0"
+    "prisma": "^4.3.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
@@ -25,11 +31,12 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.0.3",
     "@types/joi": "^17.2.3",
-    "@types/node": "^18.7.23",
+    "@types/node": "^16.3.3",
     "@types/supertest": "^2.0.12",
     "dotenv-cli": "^6.0.0",
-    "eslint": "^8.24.0",
+    "eslint": "^7.32.0",
     "jest": "^29.1.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
     "supertest": "^6.2.4",
     "ts-jest": "^29.0.2",
