--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
-    "compilerOptions": {
-      "outDir": "dist",
-      "module": "es6",
-      "esModuleInterop": true,
-      "moduleResolution": "node"
-    },
-    "ts-node": {
-      "esm": true
-    }
+  "compilerOptions": {
+   
+    "target": "es2016",                                  
+    "module": "commonjs",                                
+    "outDir": "./dist",                                   
+    "esModuleInterop": true,                             
+    "forceConsistentCasingInFileNames": true,                                    
+    "skipLibCheck": true                    
+  }
 }
