--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "bcrypt": "^5.0.1",
+    "cryptr": "^6.0.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
